--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,14 @@ body{
 }
 
 #nav-scroller{
-  transition: all 2s;
+  transition: all 0.5s;
   height: 100px;
+}
+
+#head-images{
+  height: 700px;
+  background: #2EECDC;
+  padding-top: 100px;
 }
 
 /*Ivan's CSS from before*/
