might still be able to salvage scroll effect, with some sacrifices.

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body{
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
   height: 2000px;
 }
-/*
+
 #nav-scroller{
   transition: all 0.5s;
   height: 100px;
@@ -18,7 +18,7 @@ body{
   height: 700px;
   background: #2EECDC;
   padding-top: 100px;
-}*/
+}
 
 /*Ivan's CSS from before*/
 
