--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,12 @@ body{
   height: 100px;
 }
 
+#nav-links a{
+  transition: all 0.5s;
+  font-size: 1.3em;
+  margin-top: 10px;
+}
+
 #nav-scroller a{
   font-size: 2em;
   transition: all 0.5s;
