--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,34 @@
 body{
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  height: 2000px;
 }
 
-.logo{
+#nav-scroller{
+  transition: all 0.5s;
+  height: 100px;
+}
+
+#nav-links a{
+  transition: all 0.5s;
+  font-size: 1.3em;
+  margin-top: 10px;
+}
+
+#nav-scroller a{
+  font-size: 2.4em;
+  transition: all 0.5s;
+  margin-top: 20px;
+}
+
+#head-images{
+  height: 700px;
+  background: #2EECDC;
+  padding-top: 100px;
+}
+
+/*Ivan's CSS from before*/
+
+/*.logo{
   width: 100px;
   height: 50px;
   position: relative;
@@ -38,4 +64,4 @@ body{
 .fourSquare {
   width: 19px;
   height: 19px;
-}
+}*/
