--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body{
 
 #nav-scroller{
   transition: all 0.5s;
-  height: 100px;
+  height: 70px;
 }
 
 #nav-links a{
@@ -21,47 +21,9 @@ body{
 }
 
 #head-images{
-  height: 700px;
+  height: 45%;
   background: #2EECDC;
   padding-top: 100px;
+  background: url("../img/spain_comp.jpg") no-repeat;
+  background-size: 100%;
 }
-
-/*Ivan's CSS from before*/
-
-/*.logo{
-  width: 100px;
-  height: 50px;
-  position: relative;
-  left: 100px;
-  display: inline-block;
- 
-}
-
-.col-vertical {
-  display: inline-block;
-  position: relative;
-  left: 200px;
-  vertical-align: middle;
-}
-
-.col-vertical a {
-  margin-left: 20px;
-}
-.loginBtn {
-  display: inline-block;
-  position: relative;
-  left: 600px;
-  vertical-align: middle;
-}
-
-.menuSelect {
-  display: inline-block;
-  position: relative;
-  left: 620px;
-  vertical-align: middle;
-}
-
-.fourSquare {
-  width: 19px;
-  height: 19px;
-}*/
