finished image changer

--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ body{
   height: 45%;
   background: #2EECDC;
   padding-top: 100px;
-  background: url("../img/spain_comp.jpg") no-repeat;
+  background: url("../img/hotelbed_comp.jpg") no-repeat;
   background-size: cover;
   transition: all 3s;
 }
