--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,11 @@ body{
   text-align: center;
 }
 
+
 #subhead {
   text-align: center;
+  margin-bottom: 50px;
+  margin-top: 50px;
 }
 
 .recommendation {
