--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,12 @@ body{
   width: auto;
 }
 
+.hotel-description{
+  margin-top: 15px;
+  font-size: 1.3em;
+  line-height: 1.3em;
+}
+
 /*MEDIA QUERIES*/
 
 @media screen and (max-width: 1200px){
