--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ body{
 }
 
 .hotel-img{
-  max-width: 200px;
+  max-width: 250px;
   height: auto;
   width: auto;
 }
@@ -120,6 +120,10 @@ body{
   color: #1855D0;
   font-weight: bold;
   cursor: pointer;
+}
+
+.reviews{
+  display: none;
 }
 
 /*MEDIA QUERIES*/
