--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@ body{
   width: auto;
 }
 
-.modal-hotel-description{
+#modal-hotel-description{
   font-size: 1.2em;
   padding-top: 20px;
   padding-bottom: 15px;
