--- a/css/style.css
+++ b/css/style.css
@@ -147,7 +147,7 @@ body{
 
 /*MEDIA QUERIES*/
 
-@media screen and (min-width: 992px){
+@media screen and (min-width: 992px) and (max-width: 1920px){
   #head-images{
     height: 27%;
   }
