--- a/css/style.css
+++ b/css/style.css
@@ -192,6 +192,10 @@ max-height:100%;
 max-height:100%;
 }
 
+#pic1, #pic2 {
+  height: 364px;
+}
+
 #pic4 {
   max-width:100%;
 max-height:100%;
@@ -205,6 +209,7 @@ max-height:100%;
 
   #pic3,#pic4,#pic5 {
     height: 300px;
+    margin-top: 20px;
   }
 
 
