added certified by static footer

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,13 @@ body{
  =======================================================*/
 }
 
+.certifiedByAlex {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  background-color: lightblue;
+}
+
 .locations {
   text-align: center;
 }
